# dobby-subagent-code-summarizer

./: .gitignore  Cargo.toml  NEXT-STEPS.md  README.md  backlog.md
.steeringDocs/: S01-TDD-First-Workflow-Guidance.md  S02-MermaidSteering.md
examples/: pipeline_usage.rs  smol_tdd_demo.rs  test_inference.rs  validate_setup.rs
src/: config.rs  errors.rs  inference.rs  lib.rs
src/cozodb/: connection.rs  connection_pool.rs  error.rs  mod.rs  query.rs  record.rs
src/cozodb/tests/: mod.rs
src/layer1/traits/: database.rs  error.rs  inference.rs  mod.rs  pipeline.rs  types.rs
src/layer1/traits/benchmarks/: inference_benchmarks.rs
src/layer1/traits/implementations/: database.rs  inference_engine.rs  mod.rs  pipeline_orchestrator.rs
src/layer1/traits/tests/: metal_device_detection_tests.rs  mod.rs  test_database_provider.rs  test_inference_mock.rs  test_inference_real.rs  test_model_id.rs  test_phase1_foundation.rs  test_phase2_interface_alignment.rs  test_phase3_missing_methods.rs  test_phase3_trait_bounds.rs  test_pipeline_integration.rs  test_pipeline_orchestrator.rs
tests/: cozodb_integration_tests.rs
