[package]
name = "dobby-subagent-code-summarizer"
version = "0.1.0"
edition = "2021"
description = "Real Candle RS LLM inference for Tokio code summarization"

[dependencies]
# Candle RS with Metal acceleration for Apple Silicon
candle-core = "0.9.2-alpha.1"
candle-nn = "0.9.2-alpha.1"
candle-transformers = "0.9.2-alpha.1"
candle-flash-attn = { version = "0.9.2-alpha.1", optional = true }
hf-hub = "0.3"
safetensors = "0.4"
anyhow = "1.0"

# Tokenization
tokenizers = "0.19"

# Async trait support for main dependencies too
async-trait = "0.1"

# UUID for main code
uuid = { version = "1.0", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Error handling
thiserror = "1.0"

# Serialization for config parsing
serde = "1.0"
serde_json = "1.0"

# Tokenization
# tokenizers = { workspace = true } # Using direct dependency above

# System metrics
sysinfo = "0.30"

# Memory monitoring
memory-stats = "1.1"

# CPU core count detection for parallel processing
num_cpus = "1.16"

# Random sampling for temperature
rand = "0.8"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Async streams for tokio compatibility
tokio-stream = "0.1"

# Date/time for file naming
chrono = { version = "0.4", features = ["serde"] }

# ONNX Runtime for model inference
ort = { version = "1.16", features = ["load-dynamic"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Database dependencies (temporarily disabled for TDD phase)
# cozo = "0.7"  # Disabled due to compilation conflicts

# Array operations for ONNX compatibility
ndarray = "0.15"

[build-dependencies]
# bindgen = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

# TDD testing framework
proptest = "1.4"  # Property-based testing
quickcheck = "1.0"  # QuickCheck for property testing
mockall = "0.12"  # Mocking framework for TDD

# Async testing
tokio-test = "0.4"

# Async trait support
async-trait = "0.1"

# UUID generation for tests
uuid = { version = "1.0", features = ["v4", "serde"] }

# Random number generation for mock behavior
rand = "0.8"

# Async streams for realistic mock behavior
async-stream = "0.3"

# Production monitoring and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Production-quality synchronization
parking_lot = "0.12"

# Enhanced async utilities
tokio-util = "0.7"

# Exponential backoff for retry logic
backoff = "0.4"

# Test utilities
pretty_assertions = "1.4"  # Better diff output
insta = "1.34"  # Snapshot testing

# Memory and resource monitoring for performance contracts
memory-stats = "1.1"  # Memory usage tracking
psutil = "3.2"  # Process and system monitoring

# Test data generation
fake = { version = "2.8", features = ["derive", "chrono", "uuid"] }
rand_chacha = "0.3"  # Better randomness for tests

# HTTP mocking for external dependency tests
wiremock = "0.5"

# Testcontainers for integration testing (if needed later)
# NOTE: Commented out for RED phase due to version conflicts
# testcontainers = "0.15"
# testcontainers-modules = { version = "0.8", features = ["postgres"] }

[[bin]]
name = "parallel_summarizer"
path = "src/bin/parallel_summarizer.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
overflow-checks = true
